--- a/ShuttleOff/www/index.html
+++ b/ShuttleOff/www/index.html
@@ -21,14 +21,12 @@
     <title>SHUTTLE OFF!</title>
 </head>
     <body class="is-preload">    
-        <div class="container h-100">
+        <div class="container-h-100">
             <!-- Header -->
             <header id="header">
-                <h1>
-                    <img src="images/logo1.png" alt="Logo">
-                    SHUTTLE OFF!
-                </h1>
-
+                <div class="logo_container">
+                    <img src="./images/logo.png" alt="" class="logo">
+                </div>
                 <p>
                     Reserve Courts, Hire Trainers & Play Nearby <br />
                     Trusted by hundreds of sports center around the Philippines.
@@ -44,6 +42,7 @@
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-block">LOGIN</button>
+                    
                 </div>
                 <div class="text-center pt-2">
                     <span class="txt1">
