--- a/ShuttleOff/www/dashboard.html
+++ b/ShuttleOff/www/dashboard.html
@@ -36,7 +36,7 @@
                     Currently showing how it would look like. 
                     Requirements id = place(index + 1), onclick event, tab index-->
                     <div id="proc_nav_content_wrapper">
-                        <div onclick ="checkFocusedPlace()" tabindex = "0" id = "place1" class="place">
+                        <!-- <div onclick ="checkFocusedPlace()" tabindex = "0" id = "place1" class="place">
                             <img src="../www/images/bc1.jpg" alt="">
                             <h3>Em's Court</h3>
                         </div>
@@ -55,7 +55,7 @@
                         <div onclick ="checkFocusedPlace()" tabindex = "4" id = "place5" class="place">
                             <img src="../www/images/bc1.jpg" alt="">
                             <h3>Ko's Court</h3>
-                        </div>                       
+                        </div>                        -->
                     </div>
                 </div>
             </div>
