Profile Changes. No .js

--- a/ShuttleOff/www/profile.html
+++ b/ShuttleOff/www/profile.html
@@ -24,15 +24,73 @@
         </div>
         <div class="profile">
             <div class="profile-wrapper">
+                <div class = "edit-profile">
+                    <div class="edit-profile-wrapper">
+                        <div class="edit-profile-header">
+                            <div class="edit-profile-header-wrapper">
+                                <h1>&times</h1>
+                                <h3>EDIT PROFILE</h3>
+                            </div>
+                        </div>
+                        <div class="edit-profile-acc-info">
+                            <div class="edit-profile-acc-info-wrapper">
+                                <h2>ACCOUNT INFORMATION</h2>
+                                <div class="profile-info">
+                                    <h4>First Name</h4>
+                                    <input type="text" name = "information">
+                                </div>
+
+                                <div class="profile-info">
+                                    <h4>Last Name</h4>
+                                    <input type="text" name = "information">
+                                </div>
+
+                                <div class="profile-info">
+                                    <h4>Email Address</h4>
+                                    <input type="text" name = "information">
+                                </div>
+
+                                <div class="profile-info">
+                                    <h4>City</h4>
+                                    <input type="text" name = "information">
+                                </div>
+
+                                <div class="profile-info">
+                                    <h4>Province</h4>
+                                    <input type="text" name = "information">
+                                </div>
+                                <h2>CHANGE PASSWORD</h2>
+                                <div class="profile-info">
+                                    <h4>New Password</h4>
+                                    <input type="password" name = "password">
+                                </div>
+                                <div class="profile-info">
+                                    <h4>Confirm Password</h4>
+                                    <input type="password" name = "password">
+                                </div>
+                                <h5 id = "sav_chngs">Save Changes</h5>
+                                <h5 id = "del_acc" >Delete Account</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div class="profile-header">
                     <div class="profile-header-wrapper">
                         <div class="profile-logo-container">
                             <i class="fas fa-user-circle"></i>
                             <h5>Honki.Dori05</h5>
                         </div>
-                        <div class="profile-joined-container">
-                            <i class="far fa-calendar-alt"></i>
-                            <h6>Joined December 2019</h6>
+                        <div class="join-loc-container">
+                            <div class="join-loc-wrap">
+                                <div class="profile-joined-container">
+                                    <i class="far fa-calendar-alt"></i>
+                                    <h6>Joined December 2019</h6>
+                                </div>
+                                <div class="profile-location-container">
+                                    <i class="fas fa-map-marker-alt"></i>
+                                    <h6>San Pedro, LAG</h6>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
