--- a/ShuttleOff/www/profile.html
+++ b/ShuttleOff/www/profile.html
@@ -24,11 +24,11 @@
         </div>
         <div class="profile">
             <div class="profile-wrapper">
-                <div class = "edit-profile">
+                <div class = "edit-profile" id = "edit-profile">
                     <div class="edit-profile-wrapper">
                         <div class="edit-profile-header">
                             <div class="edit-profile-header-wrapper">
-                                <h1>&times</h1>
+                                <h1 onclick="closeEditProfile()">&times</h1>
                                 <h3>EDIT PROFILE</h3>
                             </div>
                         </div>
@@ -112,7 +112,7 @@
                             <h5>Become a Court Owner</h5>
                         </div>
                         <div class="profile-content">
-                            <h5>Edit Profile</h5>
+                            <h5 onclick="openEditProfile()">Edit Profile</h5>
                         </div>
                     </div>
                 </div>
