--- a/ShuttleOff/www/dashboard.html
+++ b/ShuttleOff/www/dashboard.html
@@ -16,9 +16,9 @@
             </div>
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times</a>
-                <a href="#" onclick="closeNav()"><i class = "fas fa-search-location"> </i> <span>Play</span></a>
+                <a onclick="closeNav()"><i class = "fas fa-search-location"> </i> <span>Play</span></a>
                 <a href="profile.html"><i class="fas fa-user-circle"></i> <span>Profile</span></a>
-                <a href="#"><i class = "far fa-calendar-alt"></i><span>Schedules</span></a>
+                <a href="reservation.html"><i class = "far fa-calendar-alt"></i><span>Reservations</span></a>
                 <a href="index.html"><i class = "fas fa-power-off"></i> <span>Log Out</span></a>
             </div>
         </header>
