--- a/ShuttleOff/www/profile.html
+++ b/ShuttleOff/www/profile.html
@@ -14,11 +14,12 @@
                 <i class="fas fa-bars" onclick = "openNav()"> Menu</i>
                 <img src="images/logo1.png" alt="" class="logo">
             </div>
+            <!-- sidenav -->
             <div id="mySidenav" class="sidenav">
                 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times</a>
                 <a href="dashboard.html"><i class = "fas fa-search-location"> </i> <span>Play</span></a>
                 <a onclick="closeNav()"><i class="fas fa-user-circle"></i> <span>Profile</span></a>
-                <a href="#"><i class = "far fa-calendar-alt"></i><span>Schedules</span></a>
+                <a href="reservation.html"><i class = "far fa-calendar-alt"></i><span>Reservations</span></a>
                 <a href="index.html"><i class = "fas fa-power-off"></i> <span>Log Out</span></a>
             </div>
         </div>
@@ -53,24 +54,18 @@
                                 </div>
                                 <!-- information[3] -->
                                 <div class="profile-info">
-                                    <h4>Email Address</h4>
-                                    <input type="text" name = "information">
-                                </div>
-                                <!-- information[4] -->
-                                <div class="profile-info">
                                     <h4>Province</h4>
                                     <select name="information" onchange="setCities()">
                                         <!-- <option value="">None</option> -->
                                     </select>
                                 </div>
-                                <!-- information[5] -->
+                                <!-- information[4] -->
                                 <div class="profile-info">
                                     <h4>City</h4>
                                     <select name="information">
                                         <option value="">None</option>
                                     </select>
                                 </div>
-
                                 <h5 id = "reset_fields">Reset Fields</h5>
                                 <h5 id = "sav_chngs">Save Changes</h5>
                                 <h5 onclick = "openChangePassPanel()" id = "chng_pass">Change Password</h5>
@@ -152,7 +147,6 @@
             </div>
         </div>
     </div>
-
     <script src="https://kit.fontawesome.com/fec759ef55.js" crossorigin="anonymous"></script>
     <script src = "scripts/profile.js"></script>
 </body>
