+completed reservation UI -missing court UI

--- a/ShuttleOff/www/reservation.html
+++ b/ShuttleOff/www/reservation.html
@@ -37,34 +37,24 @@
                     <div class="pane-wrap">
                         <div id="pane1">
                             <div class="pane1-wrap">
+                                <h2 class = "empty-pane">Nothing to see here...</h2>
                                 <!-- pane-content -->
-                                <div tabindex = 0 class="pane1-content">
+                                <!-- <div tabindex = 0 class="pane1-content">
                                     <div class="pane1-content-wrap">
-                                        <div class="court-details">
-                                            <i class="fas fa-map-marker-alt">&nbsp;Court Name</i>                                            
-                                            <i class="far fa-clock">&nbsp;Time</i>
-                                        </div>
-                                        <span>
-                                            <i class="fas fa-info-circle">Address</i>
-                                            <i class="fas fa-times">Cancel?</i>
-                                        </span>
+                                        <i class="fas fa-map-marker-alt">&nbsp;Court Name</i>                                            
+                                        <i class="far fa-clock">&nbsp;Time</i>
+                                        <span><i class="far fa-trash-alt"></i></span>
                                     </div>
                                 </div>
+                                <div class="court-address">
+                                    <h4>Address</h4>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente dicta cumque laboriosam exercitationem suscipit rem perferendis aspernatur officia odio optio deleniti debitis eos beatae in, rerum cum tempore quia numquam.</p>
+                                </div> -->
                             </div>
                         </div>
                         <div id="pane2">
                             <div class="pane2-wrap">
-                                <div tabindex = 0 class="pane2-content">
-                                    <div class="pane2-content-wrap">
-                                        <div class="court-history">
-                                            <i class="fas fa-map-marker-alt">&nbsp;Court Name</i>                                            
-                                            <i class="far fa-clock">&nbsp;Date Time</i>
-                                        </div>
-                                        <span>
-                                            <i class="fas fa-info-circle">Address</i>
-                                        </span>
-                                    </div>
-                                </div>
+                                <h2 class = "empty-pane">Nothing to see here...</h2>
                             </div>
                         </div>
                     </div>
