+Court UI missing: business logic 2nd and 3rd pane

--- a/ShuttleOff/www/profile.html
+++ b/ShuttleOff/www/profile.html
@@ -20,6 +20,7 @@
                 <a href="dashboard.html"><i class = "fas fa-search-location"> </i> <span>Play</span></a>
                 <a onclick="closeNav()"><i class="fas fa-user-circle"></i> <span>Profile</span></a>
                 <a href="reservation.html"><i class = "far fa-calendar-alt"></i><span>Reservations</span></a>
+                <a href="court.html"><i class="fas fa-map-marked-alt"></i><span>Courts</span></a>
                 <a href="index.html"><i class = "fas fa-power-off"></i> <span>Log Out</span></a>
             </div>
         </div>
@@ -135,9 +136,6 @@
                         <div class="profile-content">
                             <h3>Email</h3>
                             <input type="text" id ="email" placeholder="bigschlong69@longdick.cum" readonly>
-                        </div>
-                        <div class="profile-content">
-                            <h5>Become a Court Owner</h5>
                         </div>
                         <div class="profile-content">
                             <h5 onclick="openEditProfile()">Edit Profile</h5>
