+Major change to court.js and fixed some bugs

--- a/ShuttleOff/www/court.html
+++ b/ShuttleOff/www/court.html
@@ -50,7 +50,7 @@
                                     <div class="crt-edit-header-wrp">
                                         <input class = "address radio-btn" type="radio" name = "edit-menu">
                                         <span><i class="fas fa-house-user"></i></span>
-                                        <input class = "user-cap radio-btn" type="radio" name = "edit-menu">
+                                        <input class = "schedules radio-btn" type="radio" name = "edit-menu">
                                         <span><i class="fas fa-calendar-alt"></i></span>
                                     </div>
                                 </div>
@@ -89,7 +89,7 @@
                                         </div>
                                         <div class="crt-edit-p2 crt-edit-p">
                                             <div class="crt-edit-cntnt-wrp sched-pane">
-                                                <div tabIndex = "0" class="crt-sched">
+                                                <!-- <div tabIndex = "0" class="crt-sched">
                                                     <div class="crt-sched-wrap">
                                                         <span class = "crt-sched-num">1</span>
                                                         <div class="crt-sched-det">
@@ -99,8 +99,9 @@
                                                         <span class = "crt-sched-opt crt-sched-edit"><i class="fas fa-tools"></i></span>
                                                         <span class = "crt-sched-opt crt-sched-del" ><i class="fas fa-trash-alt"></i></span>
                                                     </div>
-                                                </div>
-                                                <div class="add-circle-container">
+                                                </div> -->
+                                                <h3 style="padding-top: 0.5rem;">No Schedules Added Yet</h3>
+                                                <div id = "addSched" class="add-circle-container">
                                                     <i class="fas fa-plus-circle" id = "schedAdd"></i>
                                                 </div>
                                             </div>
